<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Trip.TripRegisterFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/fmResidentRegisterLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/fmResidentRegisterError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:textSize="11sp"
                app:lineHeight="20dp" />

            <EditText
                android:id="@+id/fmResidentRegisterName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/label_name"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/fmDeparture"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:ems="10"
                android:hint="@string/label_departure"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/fmDestination"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:hint="@string/label_destination"
                android:inputType="textPersonName"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/fmResidentRegisterStartDate"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/label_start_date"
                android:inputType="date"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/fmRiskAssessment"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:ems="10"
                android:hint="@string/label_risk_assessment"
                android:inputType="textPersonName"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/fmDesc"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/label_desc"
                android:inputType="textMultiLine"
                android:minHeight="48dp"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/fmParticipants"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:hint="@string/label_participants"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textSize="15sp" />

            <Button
                android:id="@+id/fmResidentRegisterButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_register"
                android:textSize="15sp" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>