<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Trip.TripCreateConfirmFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/fmResidentRegisterConfirmNameLabel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="100dp"
            android:text="@string/label_name"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fmResidentRegisterConfirmName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/fmResidentRegisterConfirmNameLabel"
            app:layout_constraintTop_toTopOf="@+id/fmResidentRegisterConfirmNameLabel" />

        <TextView
            android:id="@+id/fmResidentRegisterConfirmStartDateLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/label_start_date"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/fmResidentRegisterConfirmNameLabel"
            app:layout_constraintStart_toStartOf="@+id/fmResidentRegisterConfirmNameLabel"
            app:layout_constraintTop_toBottomOf="@+id/fmResidentRegisterConfirmName" />

        <TextView
            android:id="@+id/fmResidentRegisterConfirmStartDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/fmResidentRegisterConfirmName"
            app:layout_constraintStart_toStartOf="@+id/fmResidentRegisterConfirmName"
            app:layout_constraintTop_toTopOf="@+id/fmResidentRegisterConfirmStartDateLabel" />

        <TextView
            android:id="@+id/fmResidentRegisterConfirmOwnerLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/label_type"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/fmResidentRegisterConfirmStartDateLabel"
            app:layout_constraintStart_toStartOf="@+id/fmResidentRegisterConfirmStartDateLabel"
            app:layout_constraintTop_toBottomOf="@+id/fmResidentRegisterConfirmStartDate" />

        <TextView
            android:id="@+id/fmResidentRegisterConfirmOwner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/fmResidentRegisterConfirmStartDate"
            app:layout_constraintStart_toStartOf="@+id/fmResidentRegisterConfirmStartDate"
            app:layout_constraintTop_toTopOf="@+id/fmResidentRegisterConfirmOwnerLabel" />

        <Button
            android:id="@+id/fmResidentRegisterConfirmButtonCancel"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="272dp"
            android:background="@color/green"
            android:text="@string/label_cancel"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/fmResidentRegisterConfirmNameLabel"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fmResidentRegisterConfirmOwner" />

        <Button
            android:id="@+id/fmResidentRegisterConfirmButtonConfirm"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/green"
            android:text="@string/label_confirm"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/fmResidentRegisterConfirmButtonCancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/fmResidentRegisterConfirmButtonCancel"
            app:layout_constraintTop_toTopOf="@+id/fmResidentRegisterConfirmButtonCancel" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@color/light_orange"
            android:padding="15dp"
            android:text="@string/label_confirmation"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fmDepartureConfirmLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/label_departure"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/fmResidentRegisterConfirmOwnerLabel"
            app:layout_constraintStart_toStartOf="@+id/fmResidentRegisterConfirmOwnerLabel"
            app:layout_constraintTop_toBottomOf="@+id/fmResidentRegisterConfirmOwner" />

        <TextView
            android:id="@+id/fmDepartureConfirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/fmResidentRegisterConfirmOwner"
            app:layout_constraintStart_toStartOf="@+id/fmResidentRegisterConfirmOwner"
            app:layout_constraintTop_toTopOf="@+id/fmDepartureConfirmLabel" />

        <TextView
            android:id="@+id/fmDestinationConfirmLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/label_destination"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/fmDepartureConfirmLabel"
            app:layout_constraintStart_toStartOf="@+id/fmDepartureConfirmLabel"
            app:layout_constraintTop_toBottomOf="@+id/fmDepartureConfirm" />

        <TextView
            android:id="@+id/fmDestinationConfirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/fmDepartureConfirm"
            app:layout_constraintStart_toStartOf="@+id/fmDepartureConfirm"
            app:layout_constraintTop_toTopOf="@+id/fmDestinationConfirmLabel" />

        <TextView
            android:id="@+id/fmRiskAssessmentConfirmLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/label_risk_assessment"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/fmDestinationConfirmLabel"
            app:layout_constraintStart_toStartOf="@+id/fmDestinationConfirmLabel"
            app:layout_constraintTop_toBottomOf="@+id/fmDestinationConfirm" />

        <TextView
            android:id="@+id/fmRiskAssessmentConfirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/fmDestinationConfirm"
            app:layout_constraintStart_toStartOf="@+id/fmDestinationConfirm"
            app:layout_constraintTop_toTopOf="@+id/fmRiskAssessmentConfirmLabel" />

        <TextView
            android:id="@+id/fmDescConfirmLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/label_desc"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/fmRiskAssessmentConfirmLabel"
            app:layout_constraintStart_toStartOf="@+id/fmRiskAssessmentConfirmLabel"
            app:layout_constraintTop_toBottomOf="@+id/fmRiskAssessmentConfirm" />

        <TextView
            android:id="@+id/fmDescConfirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/fmRiskAssessmentConfirm"
            app:layout_constraintStart_toStartOf="@+id/fmRiskAssessmentConfirm"
            app:layout_constraintTop_toTopOf="@+id/fmDescConfirmLabel" />

        <TextView
            android:id="@+id/fmParticipantsConfirmLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/label_participants"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/fmDescConfirmLabel"
            app:layout_constraintStart_toStartOf="@+id/fmDescConfirmLabel"
            app:layout_constraintTop_toBottomOf="@+id/fmDescConfirm" />

        <TextView
            android:id="@+id/fmParticipantsConfirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/fmDescConfirm"
            app:layout_constraintStart_toStartOf="@+id/fmDescConfirm"
            app:layout_constraintTop_toTopOf="@+id/fmParticipantsConfirmLabel" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>